header half complete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Cedarville+Cursive&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -19,7 +20,65 @@
 </head>
 
 <body>
-    <h2>Hiiii</h2>
+    <header>
+        <nav>
+            <div>
+                <h2 style="color: #E6533C; font-style: italic; font-weight: bolder;">Fitness</h2>
+            </div>
+            <div class="nav-container">
+                <ul style="list-style: none;">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Search</a></li>
+                    <li><a href="">About</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div>
+            <div>
+                <h1 style="font-size: 68px; ">
+                    Get body in <br>
+                    <span class="font2">shape</span> & stay <br>
+                    healthy
+                </h1>
+                <p>
+                    A huge selection of health and fitness content, healthy recipes <br>
+                    and transformation stories to help
+                    you get fit and stay fit!
+                </p>
+                <div>
+                    <button class="btn-1">Join Club Now!</button>
+                    <button class="btn-2">Download now</button>
+                </div>
+            </div>
+            <div>
+                <!-- <img src="/images/Images 2.png" alt=""> -->
+                <div
+                    style="display: flex; gap: 10px; align-items: center; justify-content: center; background-color: #303030; border: 1px solid; border-radius: 5px; width: 200px; height: 90px;">
+                    <div
+                        style="background-color: #E6533C; border: 1px solid #E6533C; border-radius: 50%; width: 20px; height: 20px;">
+                    </div>
+                    <div>
+                        <span style="font-size: x-large;">350+</span> <br>
+                        <span style="color: grey;">Video tutorial</span>
+                    </div>
+                </div>
+                <div
+                    style="display: flex; gap: 10px; align-items: center; justify-content: center; background-color: #303030; border: 1px solid; border-radius: 5px; width: 200px; height: 90px;">
+                    <p>
+                        <span style="font-size: xx-large;">500+</span> <br>
+                        <span style="color: grey;">Free workout videos</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
