--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
         </nav>
-        <div>
+        <div class="header-container">
             <div>
                 <h1 style="font-size: 68px; ">
                     Get body in <br>
@@ -51,24 +51,26 @@
                     <button class="btn-2">Download now</button>
                 </div>
             </div>
-            <div>
+            <div class="banner-container">
                 <!-- <img src="/images/Images 2.png" alt=""> -->
-                <div
-                    style="display: flex; gap: 10px; align-items: center; justify-content: center; background-color: #303030; border: 1px solid; border-radius: 5px; width: 200px; height: 90px;">
-                    <div
-                        style="background-color: #E6533C; border: 1px solid #E6533C; border-radius: 50%; width: 20px; height: 20px;">
+                <div class="banner">
+                    <div class="box-1"
+                        style="display: flex; gap: 10px; align-items: center; justify-content: center; background-color: #303030; border: 1px solid; border-radius: 5px; width: 180px; height: 55px; padding: 15px;">
+                        <div
+                            style="background-color: #E6533C; border: 1px solid #E6533C; border-radius: 50%; width: 20px; height: 20px;">
+                        </div>
+                        <div>
+                            <span style="font-size: x-large;">350+</span> <br>
+                            <span style="color: grey;">Video tutorial</span>
+                        </div>
                     </div>
-                    <div>
-                        <span style="font-size: x-large;">350+</span> <br>
-                        <span style="color: grey;">Video tutorial</span>
+                    <div class="box-2"
+                        style="display: flex; gap: 10px; align-items: center; justify-content: center; background-color: #303030; border: 1px solid; border-radius: 5px; width: 180px; height: 55px; padding: 15px;">
+                        <p>
+                            <span style="font-size: xx-large;">500+</span> <br>
+                            <span style="color: grey;">Free workout videos</span>
+                        </p>
                     </div>
-                </div>
-                <div
-                    style="display: flex; gap: 10px; align-items: center; justify-content: center; background-color: #303030; border: 1px solid; border-radius: 5px; width: 200px; height: 90px;">
-                    <p>
-                        <span style="font-size: xx-large;">500+</span> <br>
-                        <span style="color: grey;">Free workout videos</span>
-                    </p>
                 </div>
             </div>
         </div>
