section1 change complete

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="font2">shape</span> & stay <br>
                     healthy
                 </h1>
-                <p>
+                <p class="banner-description">
                     A huge selection of health and fitness content, healthy recipes <br>
                     and transformation stories to help
                     you get fit and stay fit!
@@ -67,7 +67,7 @@
                     <div class="box-2"
                         style="display: flex; gap: 10px; align-items: center; justify-content: center; background-color: #303030; border: 1px solid; border-radius: 5px; width: 180px; height: 55px; padding: 15px;">
                         <p>
-                            <span style="font-size: xx-large;">500+</span> <br>
+                            <span style="font-size: xx-large; color: white;">500+</span> <br>
                             <span style="color: grey;">Free workout videos</span>
                         </p>
                     </div>
@@ -76,7 +76,33 @@
         </div>
     </header>
     <main>
-
+        <section class="section1">
+            <h1>Change your habits</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income <br> or access to a
+                gym.</p>
+            <div class="habit-container">
+                <div>
+                    <img src="/images/image 2.png" alt="">
+                    <h3>Movement</h3>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div>
+                    <img src="/images/image 3.png" alt="">
+                    <h3>Time</h3>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div>
+                    <img src="/images/image 4.png" alt="">
+                    <h3>Practice</h3>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div>
+                    <img src="/images/image 5.png" alt="">
+                    <h3>Weightloss</h3>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
