another section added

--- a/index.html
+++ b/index.html
@@ -103,6 +103,56 @@
                 </div>
             </div>
         </section>
+        <section class="section2">
+            <div>
+                <h1>Run an Extra <br>
+                    Mile Easily
+                </h1>
+                <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access
+                    to a
+                    gym. With <br> hundreds of professional workouts.</p>
+                <button class="btn-1">Join Now</button>
+            </div>
+            <div>
+                <img style="border-radius: 5px;" width="350px" height="280px" src="/images/run2.jpg" alt="">
+            </div>
+        </section>
+        <section class="section3">
+            <div class="training-banner">
+                <h1>Trainings and Exercises</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>
+                    access to a
+                    gym.</p>
+            </div>
+            <div>
+                <div class="grid-container">
+                    <div class="grid-item wide">
+                        <img src="/images/exercise1.jpg" alt="Workout 1">
+                        <div class="overlay1">Lorem Ipsum</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="/images//exercise2.png" alt="Workout 2">
+                        <div class="overlay2">Leg Press: Works the quadriceps and glutes</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="/images/exercise3.png" alt="Workout 3">
+                        <div class="overlay3">Leg Press: Works the quadriceps and glutes</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="/images/exercise4.png" alt="Workout 4">
+                        <div class="overlay4">250 × Fill</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="/images/exercise5.jpg" alt="Workout 5">
+                        <div class="overlay5">Leg Press: Works the quadriceps and glutes</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="/images/exercise6.jpg" alt="Workout 6">
+                        <div class="overlay6">Leg Press: Works the quadriceps and glutes</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
